--- a/Data/Extraer canciones/new_songs 2-dec-2022.ipynb
+++ b/Data/Extraer canciones/new_songs 2-dec-2022.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "9526ce95",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "b75faedc",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "261f6e54",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "8953abcf",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "212f6ef9",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "3d5b3a4a",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "9a0d63cc",
    "metadata": {},
    "outputs": [],
@@ -84,10 +84,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "d73161cd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Nothing Is Lost (You Give Me Strength)',\n",
+       " 'Face 2 Face',\n",
+       " 'DESPECHÁ RMX',\n",
+       " 'Mad Max',\n",
+       " 'Gorilla',\n",
+       " 'Losing You',\n",
+       " 'When You Bad Like That (feat. Future)',\n",
+       " 'LET GO',\n",
+       " 'Needed That',\n",
+       " 'Take me home',\n",
+       " 'Playa Del Inglés',\n",
+       " 'I Dream of Chrome',\n",
+       " 'Another Nasty Song',\n",
+       " 'Sex In The Porsche (and PARTYNEXTDOOR)',\n",
+       " 'You Never Visit Me',\n",
+       " 'Songs We Used To Sing',\n",
+       " \"Doesn't Really Matter\",\n",
+       " 'LA FINE',\n",
+       " 'FOMF',\n",
+       " 'I Guess',\n",
+       " \"Don't Cry For Me\",\n",
+       " 'Stadiums',\n",
+       " 'Checkers (feat. Bandmanrill)',\n",
+       " \"Today (can't help but cry)\",\n",
+       " 'Catch Your Eye',\n",
+       " 'Old Ways',\n",
+       " 'Nasty',\n",
+       " 'Breaking Point',\n",
+       " 'On The Day I Leave',\n",
+       " 'My Skin',\n",
+       " 'No Horse To Ride',\n",
+       " 'Tantrum (Pace Yourself)',\n",
+       " \"It Ain't My Fault\",\n",
+       " 'Clip In A Tray (feat. ScHoolboy Q)',\n",
+       " 'Daily Duppy (Dem Dead)',\n",
+       " 'All Or Nothing',\n",
+       " 'AVO TOAST',\n",
+       " 'You Are Not Alone',\n",
+       " 'Used To It',\n",
+       " 'No Bad Days (featuring Jimmie Allen)',\n",
+       " 'Home',\n",
+       " 'SUPRA 94TRO',\n",
+       " 'Set It',\n",
+       " 'FLEEK',\n",
+       " 'Strung Out Johnny',\n",
+       " 'The Interest Of Time',\n",
+       " 'Live On',\n",
+       " 'Walk Out That Door',\n",
+       " 'Lied To You',\n",
+       " 'Your Word',\n",
+       " 'Florida',\n",
+       " 'ever fallen?',\n",
+       " 'Man On A Mission (feat. SL)',\n",
+       " 'WitDemDicks!',\n",
+       " 'Ain’t Right',\n",
+       " 'No More Friends',\n",
+       " 'Sparks',\n",
+       " 'My Bed',\n",
+       " \"I Don't Cry (I Dance)\",\n",
+       " 'DANGEROUS',\n",
+       " 'feel something at all',\n",
+       " 'Blink',\n",
+       " 'Holler Rose',\n",
+       " 'Así Nací',\n",
+       " 'SUKISADA',\n",
+       " 'Sko',\n",
+       " \"They Don't Know\",\n",
+       " 'Ecstasy Of Soul',\n",
+       " 'Clown',\n",
+       " 'Ultimate Self',\n",
+       " 'Abalone',\n",
+       " 'Heart Attack',\n",
+       " 'the way that we started (taylor)',\n",
+       " 'Promise',\n",
+       " 'MURDER PLOT',\n",
+       " 'Forte',\n",
+       " 'Da Rant',\n",
+       " 'Not Because I Loved You',\n",
+       " 'AdaLINE',\n",
+       " 'talk every night',\n",
+       " 'Applause',\n",
+       " 'Someone2Me',\n",
+       " 'How to Love You',\n",
+       " 'Quiver',\n",
+       " 'Demon (featuring $NOT)',\n",
+       " 'Blow It (feat. Kali)',\n",
+       " '2016',\n",
+       " 'sungazing',\n",
+       " 'Utah',\n",
+       " 'Love You Now',\n",
+       " 'I Wish I Was',\n",
+       " 'Morritas',\n",
+       " '1st Day of School',\n",
+       " 'Sliders [Feat. Flatbush Zombies, Col3trane]',\n",
+       " 'Alien',\n",
+       " 'little pieces',\n",
+       " 'Bounds',\n",
+       " 'whts rght',\n",
+       " 'High',\n",
+       " 'Runnin into a Heartbreak']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "track_song"
    ]
