--- a/Data/Prediccion global.ipynb
+++ b/Data/Prediccion global.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "30179e95",
    "metadata": {},
    "outputs": [
@@ -10,9 +10,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-12-15 18:07:27,604 [10197] WARNING  py.warnings:109: [JupyterRequire] /Users/javi/opt/anaconda3/lib/python3.9/site-packages/scipy/__init__.py:146: UserWarning: A NumPy version >=1.16.5 and <1.23.0 is required for this version of SciPy (detected version 1.23.5\n",
+      "2023-01-25 16:24:15,491 [2878] WARNING  py.warnings:109: [JupyterRequire] /Users/javi/opt/anaconda3/lib/python3.9/site-packages/scipy/__init__.py:146: UserWarning: A NumPy version >=1.16.5 and <1.23.0 is required for this version of SciPy (detected version 1.23.5\n",
       "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n",
       "\n"
+     ]
+    },
+    {
+     "ename": "JupyterRequireError",
+     "evalue": "notebook/js/codecell: Timeout. Library 'notebook/js/codecell' is not loaded.",
+     "output_type": "error",
+     "traceback": [
+      "errback@http://localhost:8888/nbextensions/jupyter-require/core.js?v=20230125133716:190:38"
      ]
     }
    ],
@@ -764,7 +772,9 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "e8920458",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2282,7 +2292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 9,
    "id": "ce0a3cf8",
    "metadata": {},
    "outputs": [],
@@ -3754,7 +3764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 4,
    "id": "50ca347b",
    "metadata": {},
    "outputs": [],
@@ -3764,7 +3774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 5,
    "id": "dba38132",
    "metadata": {},
    "outputs": [
@@ -3799,7 +3809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 6,
    "id": "b780b3bf",
    "metadata": {},
    "outputs": [],
@@ -3809,7 +3819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 7,
    "id": "7d98cbdf",
    "metadata": {},
    "outputs": [],
@@ -3819,7 +3829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 10,
    "id": "05450203",
    "metadata": {},
    "outputs": [],
@@ -3832,7 +3842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 11,
    "id": "15006c40",
    "metadata": {},
    "outputs": [],
@@ -3842,10 +3852,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 12,
    "id": "5f1f6983",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'HGBT' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [12]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m y_pred_week2 \u001b[38;5;241m=\u001b[39m \u001b[43mHGBT\u001b[49m\u001b[38;5;241m.\u001b[39mpredict(datos_spotipy_week_2norm)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'HGBT' is not defined"
+     ]
+    }
+   ],
    "source": [
     "y_pred_week2 = HGBT.predict(datos_spotipy_week_2norm)"
    ]
@@ -3895,81 +3917,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 1,
    "id": "3e0a28ba",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>artist_name</th>\n",
-       "      <th>prediccion</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>SZA</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Caroline Polachek</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Polo G</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Lana Del Rey</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>SZA</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         artist_name  prediccion\n",
-       "0                SZA           0\n",
-       "1  Caroline Polachek           1\n",
-       "2             Polo G           1\n",
-       "3       Lana Del Rey           0\n",
-       "4                SZA           0"
-      ]
-     },
-     "execution_count": 127,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'datos_spotipy_week_2' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mdatos_spotipy_week_2\u001b[49m[[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124martist_name\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mprediccion\u001b[39m\u001b[38;5;124m'\u001b[39m]]\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'datos_spotipy_week_2' is not defined"
+     ]
     }
    ],
    "source": [
-    "datos_spotipy_week_2[['artist_name','prediccion']].head()"
+    "datos_spotipy_week_2[['artist_name','prediccion']]"
    ]
   },
   {
